tests/invalid/list_index_non_int/main.py
a: list[int] = [1, 2, 3]
b: float = 1.0
print(a[b])
